try fix dark mode color

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -9,6 +9,7 @@ body {
 
   h1, h2, h3, h4, h5, h6 {
     scroll-margin-top: 66px;
+    color: var(--global-text-color);
   }
 }
 
@@ -33,6 +34,10 @@ body.sticky-bottom-footer {
   }
 }
 
+.ph-card {
+  color: var(--global-text-color) !important;
+  background-color: var(--global-bg-color) !important;
+}
 // TODO: redefine content layout.
 
 
